Epost-tekst i html-format (#85)
* HTML-tekst i epost

* runAutoReportButton i QA

* autoReportStandardEmailText som HTML-fil

* Bytt <br> med <p>

* REVERT THIS: endret navn for å kjøre rapbase sin egen fil

* Revert "REVERT THIS: endret navn for å kjøre rapbase sin egen fil"

This reverts commit 45cfaba8f3c43e710b28049aa6bdb59159e8fb3e.

* rapbase back to main

* Ta bort knapp. I egen PR

Se #86

--- a/inst/autoReportStandardEmailText.html
+++ b/inst/autoReportStandardEmailText.html
@@ -1,30 +1,35 @@
+<p>
 Vedlegg til denne eposten inneholder resultater fra Nordisk ryggmargsskaderegister  (NordicSCIR).
 Rapporten er bestilt av deg eller av en som administrerer registeret.
-
+</p>
+<p>
 Om du ikke ønsker å motta denne rapporten eller har spørsmål om rapporten eller innholdet, kan du ta kontakt med
 NordicSCIR på epost: NordicSCIR@stolav.no
-
-Nærmere info om registeret finner du her:
-www.nordicscir.no
-
-
+</p>
+<p>
+Nærmere info om registeret finner du på <a href="https://www.norscir.no">hjemmesiden til Norscir-registeret</a>.
+</p>
+<p>
 Denne eposten inneholder ikke sensitive helseopplysninger. Forespørsler til avsender av denne eposten vil ikke bli besvart.
-
+</p>
+<p>
 Vennlig hilsen
+<br>
 Rapporteket - en resultattjeneste for medisinske kvalitetsregistre
-
-
-
+</p>
+<hr>
+<p>
 Attachments to this e-mail contains results from Nordic Spinal Cord Injury Registry (NordicScir).
 The report has been commissioned either by you or by an individual responsible for administering the registry.
 If you do not wish to receive this report or have questions about the report or its content, you can contact NordicScir by email: NorSCIR@stolav.no
-
+</p>
+<p>
 Further information about the registry is available at:
 https://www.nordicscir.no
-
+</p>
+<p>
 This email does not contain sensitive health information. Requests to the sender of this email will not be answered.
-
-
+</p>
+<p>
 Sincerely, Rapporteket – a results service for medical quality registries
-
-
+</p>
